# QuartzDB

./: .clippy.toml  .dockerignore  .gitignore  COMMIT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY_ANALYSIS.md  Dockerfile  EXECUTION_PLAN_SUMMARY.md  EXPERT_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MONITORING_GUIDE.md  PASSIVE_INCOME_STRATEGY.md  PRODUCTION_ROADMAP.md  PROJECT_STATUS.md  QUICK_START_CHECKLIST.md  README.md  README_STRATEGY.md  RESTART_PLAN.md  RUST_DEV_SETUP.md  RUST_QUICK_REFERENCE.md  TECHNICAL_EXCELLENCE_PLAN.md  TECHNICAL_EXCELLENCE_REPORT.md  TECHNICAL_OVERVIEW.md  USER_GUIDE.md  WEEK_1_ACTION_PLAN.md  docker-compose.yml  rustfmt.toml
.devcontainer/: Dockerfile  README.md  SETUP_COMPLETE.md  devcontainer.json  post-create.sh
.do/: app.yaml
.github/workflows/: ci.yml  docker.yml  test.yml
docs/: HNSW_EXPLAINED.md  VECTOR_SEARCH_EXPLAINED.md
quartz-client/: Cargo.toml
quartz-client/src/: lib.rs  metrics.rs
quartz-client/src/tests/: mod.rs
quartz-core/: Cargo.toml
quartz-core/src/: consensus.rs  error.rs  lib.rs  query.rs  transaction.rs  types.rs
quartz-core/tests/: types_test.rs
quartz-dashboard/: package-lock.json  package.json
quartz-dashboard/src/app/: layout.tsx  page.tsx
quartz-dashboard/src/app/dashboard/: page.tsx
quartz-dashboard/src/app/docs/: page.tsx
quartz-dashboard/src/app/playground/: page.tsx
quartz-dashboard/src/lib/: api.ts  auth.tsx
quartz-edge/: Cargo.toml
quartz-edge/src/: lib.rs
quartz-faas/: .dev.vars  Cargo.toml  README.md  wrangler.toml
quartz-faas/.wrangler/tmp/bundle-vPt2v8/: middleware-insertion-facade.js  middleware-loader.entry.ts
quartz-faas/.wrangler/tmp/dev-WZzEoz/: f9cc836b383ed7800443c856436244d4f05f71c8-index_bg.wasm  index.js  index.js.map
quartz-faas/src/: api.rs  auth.rs  durable.rs  error.rs  lib.rs  monitoring.rs  ratelimit.rs  sharding.rs  timeout.rs  validation.rs
quartz-faas/src/vector/: hnsw.rs  mod.rs  simd.rs
quartz-network/: Cargo.toml
quartz-network/src/: lib.rs
quartz-server/: API.md  Cargo.toml  VECTOR_SEARCH_API.md
quartz-server/examples/: README.md  semantic_search_demo.py  simple_client.rs  simple_vector_demo.py
quartz-server/src/: lib.rs  main.rs
quartz-server/tests/: api_tests.rs  vector_api_tests.rs
quartz-storage/: Cargo.toml
quartz-storage/benches/: storage_benchmarks.rs
quartz-storage/examples/: storage_demo.rs
quartz-storage/src/: cache.rs  compaction.rs  engine.rs  lib.rs  lsm.rs  wal.rs
quartz-storage/tests/: integration_test.rs  property_tests.rs
quartz-vector/: Cargo.toml
quartz-vector/src/: distance.rs  hnsw.rs  lib.rs  storage.rs  types.rs  vector.rs
quartz-vector/tests/: property_tests.proptest-regressions  property_tests.rs
scripts/: deploy-do.sh  pre-push-check.sh  setup-dev.sh
tests/: README.md  TESTING_GUIDE.md  integration_test.rs  load_test.sh  quick_test.sh  scenario_test.sh  smoke_test.sh
