[package]
name = "quartz-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Client SDK for QuartzDB"
license.workspace = true

[dependencies]
quartz-core = { path = "../quartz-core" }
quartz-network = { path = "../quartz-network" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
serde_json.workspace = true
wiremock = "0.6"
