[package]
name = "quartz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core components of QuartzDB"
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true