[package]
name = "quartz-edge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Edge computing components for QuartzDB"
license.workspace = true

[dependencies]
quartz-core = { path = "../quartz-core" }
quartz-network = { path = "../quartz-network" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
