[package]
name = "quartz-faas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "QuartzDB FaaS - Cloudflare Workers integration"
license.workspace = true

[dependencies]
worker = "0.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
console_error_panic_hook = "0.1.7"

# Note: quartz-core, quartz-storage, quartz-vector are NOT compatible with WASM
# The FaaS layer uses Durable Objects for storage, not RocksDB
# API types are defined directly in src/api.rs

[dev-dependencies]
tokio = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
