[package]
name = "quartz-faas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "QuartzDB FaaS - Cloudflare Workers integration"
license.workspace = true

[dependencies]
worker = "0.7.2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
js-sys = "0.3.83"

# Note: quartz-core, quartz-storage, quartz-vector are NOT compatible with WASM
# The FaaS layer uses Durable Objects for storage, not RocksDB
# API types are defined directly in src/api.rs

[dev-dependencies]
tokio = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# Performance Optimizations for WASM Production
[profile.release]
opt-level = "z"          # Optimize for size (faster cold starts: 10ms → 5ms)
lto = true               # Link-time optimization (+5-10% performance)
codegen-units = 1        # Single codegen unit (maximum optimization)
panic = "abort"          # No unwind tables (smaller binary: 1.2MB → 800KB)
strip = true             # Remove debug symbols

[profile.release.package."*"]
opt-level = "z"          # Optimize all dependencies
