[package]
name = "quartz-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Network layer for QuartzDB"
license.workspace = true

[dependencies]
quartz-core = { path = "../quartz-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
