[package]
name = "quartz-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Storage engine for QuartzDB"
license.workspace = true

[dependencies]
quartz-core = { path = "../quartz-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Storage-specific dependencies
rocksdb = "0.22"
bytebuffer = "2.3"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3.15"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest.workspace = true

[[bench]]
name = "storage_benchmarks"
harness = false
