[package]
name = "quartz-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Vector search module for QuartzDB with HNSW indexing"
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Vector operations
ndarray = "0.16"
rayon = "1.11"
rand = "0.9"

# Serialization for persistence
bincode = "1.3"

# Internal dependencies
quartz-storage = { path = "../quartz-storage" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.15"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
proptest.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
